Fix toolbar alignments. Adding splash screen and PWA manifest

--- a/socialcoin-participant/src/app/list-activities-toolbar/list-activities-toolbar.component.scss
+++ b/socialcoin-participant/src/app/list-activities-toolbar/list-activities-toolbar.component.scss
@@ -1,3 +1,8 @@
+:host {
+    width : 100%;
+    display: flex;
+}
+
 .fill-remaining-space {
     /* This fills the remaining space, by using flexbox. 
         Every toolbar row uses a flexbox row layout. */
